Inter-widget dependencies code reworked JS-class code generation code slightly reworked

--- a/generators/netzke_core/templates/netzke.html.erb
+++ b/generators/netzke_core/templates/netzke.html.erb
@@ -1,8 +1,8 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>netzke widget</title>
+	<title><%= @widget_name %></title>
 	<%= javascript_include_tag("/extjs/adapter/ext/ext-base.js", "/extjs/ext-all-debug.js") %>
-	<%= javascript_include_tag("netzke/netzke.js") %>
+	<%= javascript_include_tag("/netzke/netzke.js") %>
 	<%= stylesheet_link_tag("/extjs/resources/css/ext-all.css") %>
 </head>
 <body id="">
