--- a/stylesheets/core.css
+++ b/stylesheets/core.css
@@ -1,3 +1,7 @@
+/*
+This file gets loaded along with the rest of Ext library at the initial load
+*/
+
 /* feedback */
 .netzke-feedback {
     position:fixed;
