more cucumber fatures and a couple of specs

--- a/test/rails_app/app/views/panel/simple.html.erb
+++ b/test/rails_app/app/views/panel/simple.html.erb
@@ -1,1 +1,1 @@
-<%= netzke :simple_panel, :ext_config => {:title => "Simple Panel"} %>
+<%= netzke :simple_widget, :ext_config => {:title => "Simple Panel"} %>
