Refactoring (after introducing Touch support)

--- a/test/rails_app/app/views/layouts/touch.html.erb
+++ b/test/rails_app/app/views/layouts/touch.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Netzke Touch</title>
   <%= csrf_meta_tag %>
-  <%= netzke_touch_init %>
+  <%= netzke_init :platform => :touch %>
 </head>
 <body>
 
