* New "cache" option for `netzke_init` which gets passed to `javascript_include_tag` (no support for css caching of this type yet) * Netzke dynamic js and css-files such as ext.js, touch.css, now get generated at the application start, and put into "public/netzke". Solves a long standing problem with serving those files by HTTP servers in some cases. Enables caching naturally.

--- a/test/rails_app/app/views/layouts/application.html.erb
+++ b/test/rails_app/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsApp</title>
+  <title>Netzke Core Test App</title>
   <%= csrf_meta_tag %>
   <%= netzke_init %>
 </head>
