--- a/stylesheets/core.css
+++ b/stylesheets/core.css
@@ -2,11 +2,31 @@
 This file gets loaded along with the rest of Ext library at the initial load
 */
 
-/* feedback */
-.netzke-feedback {
-    position:fixed;
-    left:25%;
-    top:0;
+/* FeedbackGhost */
+.msg .x-box-mc {
+    font-size:14px;
+}
+#msg-div {
+    position:absolute;
+    left:35%;
+    top:10px;
     width:300px;
     z-index:20000;
+}
+#msg-div .msg {
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    background: #F6F6F6;
+    border: 2px solid #ccc;
+    margin-top: 2px;
+    padding: 10px 15px;
+    color: #555;
+}
+#msg-div .msg h3 {
+    margin: 0 0 8px;
+    font-weight: bold;
+    font-size: 15px;
+}
+#msg-div .msg p {
+    margin: 0;
 }
