When a component is dynamically loaded in a container, the load mask is now limited to that container

--- a/test/core_test_app/app/views/components/some_tab_panel.html.erb
+++ b/test/core_test_app/app/views/components/some_tab_panel.html.erb
@@ -2,10 +2,10 @@
      :class_name => "SimpleTabPanel",
      :active_tab => 0,
      :items => [{
-       :html => "I'm a simple Ext.Panel",
+       :html => "I'm a simple Ext.panel.Panel",
         :title => "Panel One"
       },{
-        :html => "I'm a second simple Ext.Panel",
+        :html => "I'm a second simple Ext.panel.Panel",
         :title => "Panel Two"
       }]
 %>
