Make it all work also with config.assets.enabled = true (default in Rails 3.1)

--- a/test/core_test_app/app/views/layouts/application.html.erb
+++ b/test/core_test_app/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Netzke Core Test App</title>
-  <%= csrf_meta_tag %>
+  <%= csrf_meta_tags %>
   <%= netzke_init %>
 </head>
 <body>
