--- a/test/core_test_app/app/views/simple_rails/multiple_nested.html.erb
+++ b/test/core_test_app/app/views/simple_rails/multiple_nested.html.erb
@@ -1,23 +1,23 @@
 <%= netzke :tab_panel_one, {
-  :height => 300,
+  :height => 200,
   :class_name => "SimpleTabPanel",
   :items => [{
-    :class_name => "ServerCaller",
+    netzke_component: :server_caller,
     :title => "Server Caller One"
   },{
-    :class_name => "ServerCaller",
+    netzke_component: :extended_server_caller,
     :title => "Server Caller Two"
   }]
 } %>
 
 <%= netzke :tab_panel_two, {
-  :height => 300,
+  :height => 200,
   :class_name => "SimpleTabPanel",
   :items => [{
-    :class_name => "ExtendedServerCaller",
+    netzke_component: :extended_server_caller,
     :title => "Server Caller One"
   },{
-    :class_name => "ExtendedServerCaller",
+    netzke_component: :server_caller,
     :title => "Server Caller Two"
   }]
 } %>
