--- a/test/core_test_app/app/views/layouts/application.html.erb
+++ b/test/core_test_app/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Netzke Core Test App</title>
   <%= csrf_meta_tag %>
-  <%= load_netzke %>
+  <%= load_netzke minified: true %>
 </head>
 <body>
 
