Refer to components and actions with +component+ and +action+ respectively (instead of +netzke_component+ and +netzke_action+)

--- a/test/core_test_app/app/views/simple_rails/multiple_nested.html.erb
+++ b/test/core_test_app/app/views/simple_rails/multiple_nested.html.erb
@@ -1,23 +1,23 @@
 <%= netzke :tab_panel_one, {
-  :height => 200,
-  :class_name => "SimpleTabPanel",
-  :items => [{
-    netzke_component: :server_caller,
-    :title => "Server Caller One"
+  height: 200,
+  class_name: "SimpleTabPanel",
+  items: [{
+    component: :server_caller,
+    title: "Server Caller One"
   },{
-    netzke_component: :extended_server_caller,
-    :title => "Server Caller Two"
+    component: :extended_server_caller,
+    title: "Server Caller Two"
   }]
 } %>
 
 <%= netzke :tab_panel_two, {
-  :height => 200,
-  :class_name => "SimpleTabPanel",
-  :items => [{
-    netzke_component: :extended_server_caller,
-    :title => "Server Caller One"
+  height: 200,
+  class_name: "SimpleTabPanel",
+  items: [{
+    component: :extended_server_caller,
+    title: "Server Caller One"
   },{
-    netzke_component: :server_caller,
-    :title => "Server Caller Two"
+    component: :server_caller,
+    title: "Server Caller Two"
   }]
 } %>
