--- a/test/core_test_app/app/views/simple_rails/multiple_nested.html.erb
+++ b/test/core_test_app/app/views/simple_rails/multiple_nested.html.erb
@@ -1,23 +1,11 @@
 <%= netzke :tab_panel_one, {
   height: 200,
   class_name: "SimpleTabPanel",
-  items: [{
-    component: :server_caller,
-    title: "Server Caller One"
-  },{
-    component: :extended_server_caller,
-    title: "Server Caller Two"
-  }]
+  items: [:server_caller, :extended_server_caller]
 } %>
 
 <%= netzke :tab_panel_two, {
   height: 200,
   class_name: "SimpleTabPanel",
-  items: [{
-    component: :extended_server_caller,
-    title: "Server Caller One"
-  },{
-    component: :server_caller,
-    title: "Server Caller Two"
-  }]
+  items: [:extended_server_caller, :server_caller]
 } %>
