Fix default title for Core::Panel

--- a/test/core_test_app/app/views/simple_rails/panel.html.erb
+++ b/test/core_test_app/app/views/simple_rails/panel.html.erb
@@ -1,1 +1,1 @@
-<%= netzke :panel, class_name: "Netzke::Core::Panel", title: "Netzke::Core::Panel" %>
+<%= netzke :panel, class_name: "Netzke::Core::Panel" %>
