Implement auto-loading of JS specs

--- a/test/core_test_app/app/views/layouts/application.html.erb
+++ b/test/core_test_app/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         Netzke.mochaRunner = mocha.run(function(){Netzke.mochaDone = true;});
       });
     </script>
-    <%= javascript_include_tag "/specs/helpers" %>
+    <%= javascript_include_tag "/specs/helper" %>
     <%= javascript_include_tag "/specs/#{params[:spec]}" %>
   <% end %>
 
