Split helper into 3 files based on functionality

--- a/test/core_test_app/app/views/layouts/application.html.erb
+++ b/test/core_test_app/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
         Netzke.mochaRunner = mocha.run(function(){Netzke.mochaDone = true;});
       });
     </script>
-    <%= javascript_include_tag "/specs/helper" %>
+    <%= javascript_include_tag "/specs/action_helper" %>
+    <%= javascript_include_tag "/specs/query_helper" %>
+    <%= javascript_include_tag "/specs/expectation_helper" %>
     <%= javascript_include_tag "/specs/#{params[:spec]}" %>
   <% end %>
 
