Implement spec for embedding in Rails views

--- a/test/core_test_app/app/views/simple_rails/multiple_nested.html.erb
+++ b/test/core_test_app/app/views/simple_rails/multiple_nested.html.erb
@@ -1,11 +1,11 @@
 <%= netzke :tab_panel_one, {
   height: 200,
   class_name: "SimpleTabPanel",
-  items: [:server_caller, :extended_server_caller]
+  items: [:endpoints, :extended_endpoints]
 } %>
 
 <%= netzke :tab_panel_two, {
   height: 200,
   class_name: "SimpleTabPanel",
-  items: [:extended_server_caller, :server_caller]
+  items: [:extended_endpoints, :endpoints]
 } %>
