Increase slow tests threshold

--- a/test/core_test_app/app/views/layouts/application.html.erb
+++ b/test/core_test_app/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_link_tag "/assets/mocha/mocha.css" %>
     <script>
       mocha.setup('bdd');
-      mocha.setup({ignoreLeaks: true});
+      mocha.setup({ignoreLeaks: true, slow: 500});
       Ext.onReady(function(){
         Netzke.mochaRunner = mocha.run(function(){Netzke.mochaDone = true;});
       });
