--- a/spec/rails_app/app/views/layouts/application.html.erb
+++ b/spec/rails_app/app/views/layouts/application.html.erb
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Netzke Core Test App</title>
-  <%= csrf_meta_tag %>
-  <%= load_netzke %>
-
-  <% if params[:spec] %>
-    <%= javascript_include_tag "/assets/expect/expect.js" %>
-    <%= javascript_include_tag "/assets/mocha/mocha.js" %>
-    <%= stylesheet_link_tag "/assets/mocha/mocha.css" %>
-    <script>
-      mocha.setup('bdd');
-      mocha.setup({ignoreLeaks: true, slow: 500});
-      Ext.onReady(function(){
-        Netzke.mochaRunner = mocha.run(function(){Netzke.mochaDone = true;});
-      });
-    </script>
-    <%= javascript_include_tag "/specs/support__action_helper" %>
-    <%= javascript_include_tag "/specs/support__query_helper" %>
-    <%= javascript_include_tag "/specs/support__expectation_helper" %>
-    <%= javascript_include_tag "/specs/#{params[:spec]}" %>
-  <% end %>
-
+  <title>RailsApp</title>
+  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%= yield %>
-<div id="mocha"></div>
+
 </body>
 </html>
