--- a/stylesheets/core.css
+++ b/stylesheets/core.css
@@ -2,7 +2,7 @@
 This file gets loaded along with the rest of Ext library at the initial load
 */
 
-/* FeedbackGhost */
+/* NetzkeNotifier */
 .msg .x-box-mc {
     font-size:14px;
 }
